Initial commit after changes.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/harshini-logo-removebg.png" width="151" height="28" alt="Annie home">
+        <img src="./assets/images/harshini-logo-removebg.png" width="151" height="28" alt="home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -119,7 +119,7 @@
 
           <figure class="hero-banner">
             <img src="./assets/images/banner-mypic.png" width="680" height="645"
-              alt="Annie, the blonde, dressed in a green hoodie with a smile on her face" class="w-100">
+              class="w-100">
           </figure>
 
         </div>
@@ -363,11 +363,6 @@
             </ul>
 
           </div>
-
-          <!-- <figure class="skill-banner">
-            <img src="./assets/images/skills.png" width="581" height="657" loading="lazy"
-              alt="Annie, the blonde, dressed in a green hoodie with a smile on her face" class="w-100">
-          </figure> -->
 
         </div>
       </section>
