--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Annie | Portfolio</title>
-  <meta name="title" content="Annie | Portfolio">
+  <title>Harshini | Portfolio</title>
+  <meta name="title" content="Portfolio">
   <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
 
   <!-- 
@@ -55,7 +55,7 @@
     <div class="container">
 
       <a href="./index.html" class="logo">
-        <img src="./assets/images/harshini-logo-removebg.png" width="151" height="28" alt="Annie home">
+        <img src="./assets/images/harshini-logo-removebg.png" width="151" height="28" alt="home">
       </a>
 
       <nav class="navbar" data-navbar>
