--- a/service.html
+++ b/service.html
@@ -55,7 +55,7 @@
     <div class="container">
 
       <a href="./index.html" class="logo">
-        <img src="./assets/images/harshini-logo-removebg.png" width="151" height="28" alt="Annie home">
+        <img src="./assets/images/harshini-logo-removebg.png" width="151" height="28" alt="home">
       </a>
 
       <nav class="navbar" data-navbar>
