Changes in contact

--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
 
                 <div>
                   <p class="label-lg">LinkedIn</p>
-                  <p class="body-lg"><a href="https://www.linkedin.com/in/harshini">https://www.linkedin.com/in/harshini</a></p>
+                  <p class="body-lg"><a href="https://www.linkedin.com/in">https://www.linkedin.com/in/harshini</a></p>
                 </div>
 
               </li>
