Changes in home page

--- a/index.html
+++ b/index.html
@@ -144,10 +144,6 @@
             <li class="slider-item card-container">
               <div class="card card-lg">
 
-                <!-- <figure class="card-media">
-                  <img src="./assets/images/att_logo.png" width="100" height="100" loading="lazy" alt="Jennifer Lutheran"
-                    class="img-cover">
-                </figure> -->
                 <img src="./assets/images/att_logo.png" width="130" height="40" alt="clients" class="w-10">
 
                 <div class="card-content">
@@ -168,10 +164,6 @@
             <li class="slider-item card-container">
               <div class="card card-lg">
 
-                <!-- <figure class="card-media">
-                  <img src="./assets/images/testi-2.jpg" width="100" height="100" loading="lazy" alt="Jennifer Lutheran"
-                    class="img-cover">
-                </figure> -->
                 <img src="./assets/images/walmart-logo.png" width="130" height="40" alt="clients" class="w-10"/>
                 <div class="card-content">
 
@@ -183,10 +175,6 @@
                     Worked with unit testing of JavaScript applications using Karma, Jasmine , Jest
                   </blockquote>
 
-                  <!-- <p class="client-name">Jennifer Lutheran</p>
-
-                  <p class="client-title">CEO at pxdraft</p> -->
-
                 </div>
 
               </div>
@@ -195,11 +183,7 @@
             <li class="slider-item card-container">
               <div class="card card-lg">
 
-                <!-- <figure class="card-media">
-                  <img src="./assets/images/testi-3.jpg" width="100" height="100" loading="lazy" alt="Jennifer Lutheran"
-                    class="img-cover">
-                </figure> -->
-                <img src="./assets/images/tcs.png" width="130" height="40" alt="clients" class="w-10">
+                <img src="./assets/images/mindtree.png" width="130" height="40" alt="clients" class="w-10">
                 <div class="card-content">
 
                   <blockquote class="body-sm">
@@ -208,11 +192,6 @@
                     Creating Typescript reusable components and services to consume REST API's using Component based architecture provided by Angular 6.
                     
                   </blockquote>
-<!-- 
-                  <p class="client-name">Jennifer Lutheran</p>
-
-                  <p class="client-title">CEO at pxdraft</p> -->
-
                 </div>
 
               </div>
@@ -220,11 +199,6 @@
 
             <li class="slider-item card-container">
               <div class="card card-lg">
-
-                <!-- <figure class="card-media">
-                  <img src="./assets/images/testi-4.jpg" width="100" height="100" loading="lazy" alt="Jennifer Lutheran"
-                    class="img-cover">
-                </figure> -->
                 <img src="./assets/images/ibm.png" width="130" height="40" alt="clients" class="w-10">
                 <div class="card-content">
 
@@ -235,10 +209,6 @@
                     Implemented new Dockers container creation process for each GIT branch gets started on Jenkins as Continuous Integration server.
                   </blockquote>
 
-                  <!-- <p class="client-name">Jennifer Lutheran</p>
-
-                  <p class="client-title">CEO at pxdraft</p> -->
-
                 </div>
 
               </div>
@@ -246,24 +216,15 @@
 
             <li class="slider-item card-container">
               <div class="card card-lg">
-
-                <!-- <figure class="card-media">
-                  <img src="./assets/images/testi-4.jpg" width="100" height="100" loading="lazy" alt="Jennifer Lutheran"
-                    class="img-cover">
-                </figure> -->
                 <img src="./assets/images/pramati.png" width="130" height="40" alt="clients" class="w-10">
                 <div class="card-content">
 
                   <blockquote class="body-sm">
-                    Used front end web development tools HTML5, CSS3, JavaScript, Bootstrap, Angular JS to design UI
+                    Used front end web development tools HTML5, CSS3, JavaScript, Bootstrap, Angular JS to design UI.
                     Wrote various classes and methods for data retrieval while implementing AngularJS concepts. 
-                    Used AJAX framework for asynchronous data transfer between the browser and the server
-                    Worked upon the dashboard for the project which contained a variety of charts and drag gable components using JQUERY UI Library.
+                    Used AJAX framework for asynchronous data transfer between the browser and the server.
+                    Implemented JavaScript and jQuery for client-side validations. Implemented AJAX functionality.
                   </blockquote>
-
-                  <!-- <p class="client-name">Jennifer Lutheran</p>
-
-                  <p class="client-title">CEO at pxdraft</p> -->
 
                 </div>
 
