--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,13 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="label-lg navbar-link has-after">Skills</a>
+            <a href="./service.html" class="label-lg navbar-link has-after">Skills</a>
           </li>
+
+          <li class="navbar-item">
+            <a href="./portfolio.html" class="label-lg navbar-link has-after">Work Experience</a>
+          </li>
+
 
           <li class="navbar-item">
             <a href="./contact.html" class="label-lg navbar-link has-after active">Contact</a>
@@ -105,13 +110,13 @@
               <li class="contact-item">
 
                 <div class="item-icon" style="background-color: hsl(177, 39%, 72%)">
-                  <ion-icon name="call" aria-hidden="true"></ion-icon>
+                  <ion-icon name="document-outline" aria-hidden="true"></ion-icon>
                 </div>
 
                 <div>
-                  <p class="label-lg">Phone</p>
+                  <p class="label-lg">Resume</p>
 
-                  <p class="body-lg">(408)-6410587</p>
+                  <a class="body-lg" href="https://drive.google.com/file/d/1C0VsfLLsc1DdNlWh8iu90504DxBZuPr6/view?usp=sharing">Resume</a>
                 </div>
 
               </li>
