--- a/service.html
+++ b/service.html
@@ -70,6 +70,10 @@
           </li>
 
           <li class="navbar-item">
+            <a href="./portfolio.html" class="label-lg navbar-link has-after">Work Experience</a>
+          </li>
+
+          <li class="navbar-item">
             <a href="./contact.html" class="label-lg navbar-link has-after">Contact</a>
           </li>
 
@@ -90,6 +94,273 @@
   <main>
     <article>
 
+       <!-- Skills -->
+      </section>
+
+      <!-- Skills -->
+
+      <section class="section skill" aria-labelledby="skill-label">
+        <div class="container">
+
+          <div class="skill-content">
+
+            <h2 class="section-title text-left" id="skill-label">Technical Skills</h2>
+
+            <ul class="skill-list">
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(177, 39%, 72%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-html5"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">HTML</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(41, 99%, 64%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-css3"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">CSS</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(19, 97%, 85%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-react"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">React JS</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(221, 100%, 79%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-angular"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Angular</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(76, 39%, 72%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-javascript"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Javascript</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(301deg 100% 90% / 29%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-chrome"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Web App Dev</h2>
+
+                </div>
+              </li>
+
+              <!-- ----------- -->
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(0, 100%, 90%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-nodejs"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">NodeJS</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(106deg 29% 81%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-amazon"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">AWS</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(8deg 72% 58% / 37%)">
+
+                  <div class="card-media">
+                    <ion-icon name="code-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Java</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: #3880ff4a">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-python"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Python</h2>
+
+                </div>
+              </li>
+
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(177, 39%, 72%)">
+
+                  <div class="card-media">
+                    <ion-icon name="analytics-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">MySQL</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(41, 99%, 64%)">
+
+                  <div class="card-media">
+                    <ion-icon name="analytics-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Mongo</h2>
+
+                </div>
+              </li>
+
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(19, 97%, 85%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-github"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">GIT</h2>
+
+                </div>
+              </li>
+
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(221, 100%, 79%)">
+
+                  <div class="card-media">
+                    <ion-icon name="accessibility-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Jest</h2>
+
+                </div>
+              </li>
+
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(76, 39%, 72%)">
+
+                  <div class="card-media">
+                    <ion-icon name="accessibility-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Jasmine</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(301deg 100% 90% / 29%)">
+
+                  <div class="card-media">
+                    <ion-icon name="expand-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Agile</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(0, 100%, 90%)">
+
+                  <div class="card-media">
+                    <ion-icon name="create-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Visual Studio</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(106deg 29% 81%)">
+
+                  <div class="card-media">
+                    <ion-icon name="create-outline"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">WebStorm</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: hsl(8deg 72% 58% / 37%)">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-apple"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Mac</h2>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="card card-sm" style="background-color: #3880ff4a">
+
+                  <div class="card-media">
+                    <ion-icon name="logo-tux"></ion-icon>
+                  </div>
+
+                  <h2 class="card-title">Unix</h2>
+
+                </div>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+      </section>
+
       <!-- 
         - #SERVICE
       -->
@@ -98,7 +369,7 @@
         <!-- style="background-image: url('./assets/images/service-bg.png')"> -->
         <div class="container">
 
-          <!-- <h2 class="section-title headline-md text-center" id="service-label">My Services</h2> -->
+          <h2 class="section-title text-left" id="service-label">My Services</h2>
 
           <ul class="service-list">
 
