--- a/index.html
+++ b/index.html
@@ -67,12 +67,18 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="#" class="label-lg navbar-link has-after active">Home</a>
+            <a href="#" class="label-lg navbar-link has-after active">About</a>
           </li>
+
 
           <li class="navbar-item">
             <a href="./service.html" class="label-lg navbar-link has-after">Skills</a>
           </li>
+
+          <li class="navbar-item">
+            <a href="./portfolio.html" class="label-lg navbar-link has-after">Work Experience</a>
+          </li>
+
 
           <li class="navbar-item">
             <a href="./contact.html" class="label-lg navbar-link has-after">Contact</a>
@@ -111,7 +117,7 @@
             <p class="hero-text body-md">
               Experienced Software Engineer with demonstrated history of working as a UI developer. 
               Passionate about coding and debugging. Skilled in HTML, CSS, Javascript, Angular, React programming.
-              Strong Engineering professional with a Master's degree in Data Analytics from San Jose State University.
+              Strong Engineering professional with a Master's degree from San Jose State University.
             </p>
 
 
@@ -125,7 +131,7 @@
         </div>
       </section>
 
-      <a href="#testi-label" class="btn btn-primary" style="margin: 0 auto;">More</a>
+      <!-- <a href="#testi-label" class="btn btn-primary" style="margin: 0 auto;">More</a> -->
 
 
 
@@ -134,7 +140,7 @@
         <!-- - #Work experience
       --> 
 
-      <section class="section testi" aria-labelledby="testi-label">
+      <!-- <section class="section testi" aria-labelledby="testi-label">
         <div class="container">
 
           <h2 class="section-title text-center" id="testi-label">Work Experience</h2>
@@ -163,16 +169,14 @@
 
             <li class="slider-item card-container">
               <div class="card card-lg">
-
-                <img src="./assets/images/walmart-logo.png" width="130" height="40" alt="clients" class="w-10"/>
+                <img src="./assets/images/pramati.png" width="130" height="40" alt="clients" class="w-10">
                 <div class="card-content">
 
                   <blockquote class="body-sm">
-                    Developed web applications running on NodeJS using React in the front-end. 
-                    Good experience in JavaScript MVC framework like Angular 2+ etc.
-                    Worked with JSON web tokens for authorization and authentication security.
-                    Worked on Lifecycle Methods, State, Specs, Props, Event to create interactive ReactJS Components.
-                    Worked with unit testing of JavaScript applications using Karma, Jasmine , Jest
+                    Used front end web development tools HTML5, CSS3, JavaScript, Bootstrap, Angular JS to design UI.
+                    Wrote various classes and methods for data retrieval while implementing AngularJS concepts. 
+                    Used AJAX framework for asynchronous data transfer between the browser and the server.
+                    Implemented JavaScript and jQuery for client-side validations. Implemented AJAX functionality.
                   </blockquote>
 
                 </div>
@@ -183,7 +187,7 @@
             <li class="slider-item card-container">
               <div class="card card-lg">
 
-                <img src="./assets/images/mindtree.png" width="130" height="40" alt="clients" class="w-10">
+                <img src="./assets/images/osi.png" width="130" height="40" alt="clients" class="w-10">
                 <div class="card-content">
 
                   <blockquote class="body-sm">
@@ -214,124 +218,12 @@
               </div>
             </li>
 
-            <li class="slider-item card-container">
-              <div class="card card-lg">
-                <img src="./assets/images/pramati.png" width="130" height="40" alt="clients" class="w-10">
-                <div class="card-content">
-
-                  <blockquote class="body-sm">
-                    Used front end web development tools HTML5, CSS3, JavaScript, Bootstrap, Angular JS to design UI.
-                    Wrote various classes and methods for data retrieval while implementing AngularJS concepts. 
-                    Used AJAX framework for asynchronous data transfer between the browser and the server.
-                    Implemented JavaScript and jQuery for client-side validations. Implemented AJAX functionality.
-                  </blockquote>
-
-                </div>
-
-              </div>
-            </li>
-
           </ul>
 
         </div>
-      </section>
+      </section> -->
 
-      <!-- Skills -->
-
-      <section class="section skill" aria-labelledby="skill-label">
-        <div class="container">
-
-          <div class="skill-content">
-
-            <h2 class="section-title text-center" id="skill-label">My Skills</h2>
-
-            <ul class="skill-list">
-
-              <li>
-                <div class="card card-sm" style="background-color: hsl(177, 39%, 72%)">
-
-                  <div class="card-media">
-                    <ion-icon name="logo-html5"></ion-icon>
-                  </div>
-
-                  <h2 class="card-title">HTML</h2>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="card card-sm" style="background-color: hsl(41, 99%, 64%)">
-
-                  <div class="card-media">
-                    <ion-icon name="logo-css3"></ion-icon>
-                  </div>
-
-                  <h2 class="card-title">CSS</h2>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="card card-sm" style="background-color: hsl(19, 97%, 85%)">
-
-                  <div class="card-media">
-                    <ion-icon name="logo-react"></ion-icon>
-                  </div>
-
-                  <h2 class="card-title">React JS</h2>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="card card-sm" style="background-color: hsl(221, 100%, 79%)">
-
-                  <div class="card-media">
-                    <ion-icon name="logo-angular"></ion-icon>
-                  </div>
-
-                  <h2 class="card-title">Angular</h2>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="card card-sm" style="background-color: hsl(76, 39%, 72%)">
-
-                  <div class="card-media">
-                    <ion-icon name="logo-javascript"></ion-icon>
-                  </div>
-
-                  <h2 class="card-title">Javascript</h2>
-
-                </div>
-              </li>
-
-              <li>
-                <div class="card card-sm" style="background-color: hsl(245, 100%, 90%)">
-
-                  <div class="card-media">
-                    <ion-icon name="logo-chrome"></ion-icon>
-                  </div>
-
-                  <h2 class="card-title">Web App Dev</h2>
-
-                </div>
-              </li>
-
-              
-
-            </ul>
-
-          </div>
-
-        </div>
-      </section>
-
-
-
-
-
+       
       <!-- 
         - #CTA
       -->
@@ -350,8 +242,8 @@
     - #FOOTER
   -->
 
-  <footer class="footer">
-  </footer>
+  <!-- <footer class="footer">
+  </footer> -->
 
 
 
@@ -360,16 +252,7 @@
   <!-- 
     - custom js link
   -->
-  <style>
-    .skill-list {
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-    }
 
-    .skill-list.show {
-      opacity: 1;
-    }
-  </style>
   <script src="./assets/js/script.js"></script>
 
   <!-- 
