--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 
       <section class="section contact has-bg-image" aria-labelledby="contact-label">
         <!-- style="background-image: url('./assets/images/contact-bg.png')"> -->
-        <div class="container" style="width: 50%;min-height: 517px;">
+        <div class="container" style="min-height: 517px;">
 
           <div class="contact-content">
 
