--- a/portfolio.html
+++ b/portfolio.html
@@ -235,6 +235,7 @@
               Involved in gathering business and functional requirements. 
               Work with QA and CM team for code build/releases, test case design and defect resolution.
               Demonstrated communication skills, and the ability to work directly with clients/customers.</p>
+              <p><b> Duration : </b>May 2021-Till Date</p>
           </div>
         </div>
       </li>
@@ -245,11 +246,11 @@
           <div class="client-container">
           </br>
             <h4><b>Sr. UI Developer</b></h4> 
-            <p> Developed Single Page applications that runs on differet web browsers and writtern in JS and React. 
-              Co-operated in building RESTful APIs.
-              Involved in gathering business and functional requirements. 
-              Work with QA and CM team for code build/releases, test case design and defect resolution.
-              Demonstrated communication skills, and the ability to work directly with clients/customers.</p>
+            <p> Used front end web development tools HTML5, CSS3, JavaScript, Bootstrap, Angular JS to design UI.
+              Wrote various classes and methods for data retrieval while implementing AngularJS concepts. 
+              Used AJAX framework for asynchronous data transfer between the browser and the server.
+              Implemented JavaScript and jQuery for client-side validations. Implemented AJAX functionality.</p>
+              <p><b> Duration : </b> Feb 2018-Dec 2020</p>
           </div>
         </div>
       </li>
@@ -259,12 +260,13 @@
           <img src="./assets/images/osi-nobg.png" alt="Avatar" style="width:30%">
           <div class="client-container">
           </br>
-            <h4><b>Sr. UI Developer</b></h4> 
-            <p> Developed Single Page applications that runs on differet web browsers and writtern in JS and React. 
-              Co-operated in building RESTful APIs.
-              Involved in gathering business and functional requirements. 
-              Work with QA and CM team for code build/releases, test case design and defect resolution.
-              Demonstrated communication skills, and the ability to work directly with clients/customers.</p>
+            <h4><b>UI Developer</b></h4> 
+            <p> Created a component for UX-Library consisting of Button, Checkbox, Input, Icons, Toggle Button, Dropdown,
+              Multi-Level Dropdown and many more.
+              Developed web-based customer applications using HTML5 and CSS3, Typescript, JSON, AJAX, Angular6.
+              Creating Typescript reusable components and services to consume REST API's using Component based 
+              architecture provided by Angular 6.</p>
+              <p><b> Duration : </b>Jun 2016-Feb 2018</p>
           </div>
         </div>
       </li>
@@ -274,12 +276,13 @@
           <img src="./assets/images/ibm.png" alt="Avatar" style="width:30%">
           <div class="client-container">
           </br>
-            <h4><b>Sr. UI Developer</b></h4> 
-            <p> Developed Single Page applications that runs on differet web browsers and writtern in JS and React. 
-              Co-operated in building RESTful APIs.
-              Involved in gathering business and functional requirements. 
-              Work with QA and CM team for code build/releases, test case design and defect resolution.
-              Demonstrated communication skills, and the ability to work directly with clients/customers.</p>
+            <h4><b>Front end Developer</b></h4> 
+            <p> Enhanced legacy application by building new components in React and typescript.
+              Hands-on experience on React for one complete project in rebasing the UI of the application.
+              Worked in using React JS components, Forms, Events, Keys, Router, Animations, and Redux concept.
+              Implemented new Dockers container creation process for each GIT branch gets started on Jenkins as 
+              Continuous Integration server.</p>
+              <p><b> Duration : </b>May 2015 – Jun 2016</p>
           </div>
         </div>
       </li>
