--- a/portfolio.html
+++ b/portfolio.html
@@ -236,6 +236,7 @@
               Work with QA and CM team for code build/releases, test case design and defect resolution.
               Demonstrated communication skills, and the ability to work directly with clients/customers.</p>
               <p><b> Duration : </b>May 2021-Till Date</p>
+              <p><b> Location : </b>AT&T, Plano, Tx (Remote)</p>
           </div>
         </div>
       </li>
@@ -251,6 +252,7 @@
               Used AJAX framework for asynchronous data transfer between the browser and the server.
               Implemented JavaScript and jQuery for client-side validations. Implemented AJAX functionality.</p>
               <p><b> Duration : </b> Feb 2018-Dec 2020</p>
+              <p><b> Location : </b>Hyderabad, INDIA</p>
           </div>
         </div>
       </li>
@@ -267,6 +269,7 @@
               Creating Typescript reusable components and services to consume REST API's using Component based 
               architecture provided by Angular 6.</p>
               <p><b> Duration : </b>Jun 2016-Feb 2018</p>
+              <p><b> Location : </b>Hyderabad, INDIA</p>
           </div>
         </div>
       </li>
@@ -283,6 +286,7 @@
               Implemented new Dockers container creation process for each GIT branch gets started on Jenkins as 
               Continuous Integration server.</p>
               <p><b> Duration : </b>May 2015 – Jun 2016</p>
+              <p><b> Location : </b>Hyderabad, INDIA</p>
           </div>
         </div>
       </li>
