--- a/portfolio.html
+++ b/portfolio.html
@@ -236,7 +236,7 @@
               Work with QA and CM team for code build/releases, test case design and defect resolution.
               Demonstrated communication skills, and the ability to work directly with clients/customers.</p>
               <p><b> Duration : </b>May 2021-Till Date</p>
-              <p><b> Location : </b>AT&T, Plano, Tx (Remote)</p>
+              <p><b> Location : </b>Plano, Tx (Remote)</p>
           </div>
         </div>
       </li>
