updated mail id

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                 <div>
                   <p class="label-lg">Mail</p>
 
-                  <p class="body-lg">harshinigadige.29@gmail.com</p>
+                  <p class="body-lg">harshiniraj.m29@gmail.com</p>
                 </div>
 
               </li>
