--- a/contact.html
+++ b/contact.html
@@ -110,13 +110,13 @@
               <li class="contact-item">
 
                 <div class="item-icon" style="background-color: hsl(177, 39%, 72%)">
-                  <ion-icon name="document-outline" aria-hidden="true"></ion-icon>
+                  <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
                 </div>
 
                 <div>
-                  <p class="label-lg">Resume</p>
+                  <p class="label-lg">Phone</p>
 
-                  <a class="body-lg" href="https://drive.google.com/file/d/1C0VsfLLsc1DdNlWh8iu90504DxBZuPr6/view?usp=sharing">Resume</a>
+                  <p class="body-lg"> 408-641-0587 </p>
                 </div>
 
               </li>
@@ -130,7 +130,7 @@
                 <div>
                   <p class="label-lg">Mail</p>
 
-                  <p class="body-lg">harshiniraj.m29@gmail.com</p>
+                  <p class="body-lg">harshinigadige.29@gmail.com</p>
                 </div>
 
               </li>
