--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <p class="hero-text body-md">
               Experienced Software Engineer with demonstrated history of working as a UI developer. 
-              Passionate about coding and debugging. Skilled in HTML, CSS, Javascript, Angular, React programming.
+              Passionate about coding and debugging. Skilled in HTML, CSS, Javascript, Angular, React and Vue programming.
               Strong Engineering professional with a Master's degree from San Jose State University.
             </p>
 
