--- a/service.html
+++ b/service.html
@@ -172,15 +172,13 @@
                 <div class="card card-sm" style="background-color: hsl(301deg 100% 90% / 29%)">
 
                   <div class="card-media">
-                    <ion-icon name="logo-chrome"></ion-icon>
+                    <ion-icon name="logo-vue"></ion-icon>
                   </div>
 
-                  <h2 class="card-title">Web App Dev</h2>
+                  <h2 class="card-title"> Vue </h2>
 
                 </div>
               </li>
-
-              <!-- ----------- -->
 
               <li>
                 <div class="card card-sm" style="background-color: hsl(0, 100%, 90%)">
@@ -353,7 +351,7 @@
 
                 </div>
               </li>
-
+              
             </ul>
 
           </div>
